Add hugo metadata to SIG list so we can index it on k8s.dev (#5066)
* Add hugo metadata to SIG list so we can index it on k8s.dev

Signed-off-by: Jorge O. Castro <jorgec@vmware.com>

* Run make generate to generate the proper file

Signed-off-by: Jorge O. Castro <jorgec@vmware.com>

* Move hugo block above the template header

Signed-off-by: Jorge O. Castro <jorgec@vmware.com>

* Update generator/list.tmpl

Co-authored-by: Bob Killen <killen.bob@gmail.com>

* Run make to generate final page

Signed-off-by: Jorge O. Castro <jorgec@vmware.com>

Co-authored-by: Bob Killen <killen.bob@gmail.com>

--- a/generator/list.tmpl
+++ b/generator/list.tmpl
@@ -1,5 +1,15 @@
-{{- template "header" }}
-# SIGs and Working Groups
+---
+title: Community Groups
+linkTitle: Community Groups
+description:  |
+  A list of our community groups: Special Interest Groups, Working Groups, User Groups and Committees.
+weight: 99
+type: docs
+aliases: [ "/groups", "/sigs" ]
+slug: community-groups
+---
+
+{{ template "header" }}
 
 Most community activity is organized into Special Interest Groups (SIGs),
 time bounded Working Groups, and the [community meeting](communication/README.md#weekly-meeting).
