Replace master list with community group name in sig-list template

--- a/generator/list.tmpl
+++ b/generator/list.tmpl
@@ -21,7 +21,7 @@ Each group's material is in its subdirectory in this project.
 
 When the need arises, a [new SIG can be created](sig-wg-lifecycle.md)
 
-### Master SIG List
+### Special Interest Groups
 
 | Name | Label | Chairs | Contact | Meetings |
 |------|-------|--------|---------|----------|
@@ -37,7 +37,7 @@ When the need arises, a [new SIG can be created](sig-wg-lifecycle.md)
 {{- end -}}
 {{- end }}
 
-### Master Working Group List
+### Working Groups
 
 | Name | Stakeholder SIGs |Organizers | Contact | Meetings |
 |------|------------------|-----------|---------|----------|
@@ -45,7 +45,7 @@ When the need arises, a [new SIG can be created](sig-wg-lifecycle.md)
 |[{{.Name}}]({{.Dir}}/README.md)|{{range .StakeholderSIGs}}* {{.}}<br>{{end }}|{{range .Leadership.Chairs}}* [{{.Name}}](https://github.com/{{.GitHub}}){{if .Company}}, {{.Company}}{{end}}<br>{{end}}|* [Slack](https://kubernetes.slack.com/messages/{{.Contact.Slack}})<br>* [Mailing List]({{.Contact.MailingList}})|{{range .Meetings}}* {{.Description}}: [{{.Day}}s at {{.Time}} {{.TZ}} ({{.Frequency}})]({{.URL}})<br>{{end}}
 {{- end }}
 
-### Master User Group List
+### User Groups
 
 | Name | Label |Organizers | Contact | Meetings |
 |------|-------|------------|--------|----------|
@@ -53,7 +53,7 @@ When the need arises, a [new SIG can be created](sig-wg-lifecycle.md)
 |[{{.Name}}]({{.Dir}}/README.md)|{{.Label}}|{{range .Leadership.Chairs}}* [{{.Name}}](https://github.com/{{.GitHub}}){{if .Company}}, {{.Company}}{{end}}<br>{{end}}|* [Slack](https://kubernetes.slack.com/messages/{{.Contact.Slack}})<br>* [Mailing List]({{.Contact.MailingList}})|{{range .Meetings}}* {{.Description}}: [{{.Day}}s at {{.Time}} {{.TZ}} ({{.Frequency}})]({{.URL}})<br>{{end}}
 {{- end }}
 
-### Master Committee List
+### Committees
 
 | Name |  Label | Members | Contact |
 |------|--------|---------|---------|
