--- a/generator/ug_readme.tmpl
+++ b/generator/ug_readme.tmpl
@@ -47,3 +47,6 @@ The [charter]({{.CharterLink}}) defines the scope and governance of the {{.Name}
     - [@kubernetes/{{.Name}}](https://github.com/orgs/kubernetes/teams/{{.Name}}) {{- if .Description }} - {{.Description}} {{- end}}
 {{- end }}
 {{- end }}
+{{- if .Contact.Liaison.Name }}
+- Steering Committee Liaison: {{.Contact.Liaison.Name}} (**[@{{.Contact.Liaison.GitHub}}](https://github.com/{{.Contact.Liaison.GitHub}})**)
+{{- end }}
