generator: make subproject owners links useful
reduce the visual noise, and make the links go to githubs UI

so: https://raw.githubusercontent.com/org/repo/branch/path/to/OWNERS
becomes:
- link text: org/repo/path/to
- link target: https://github.com/org/repo/blob/branch/path/to/ORWNERS

note: this does assume/imply we don't need to model the complexity of
subprojects owning different branches... but, we haven't found a reason
to do so in 5 years, seems a safe assumption

--- a/generator/sig_readme.tmpl
+++ b/generator/sig_readme.tmpl
@@ -76,7 +76,7 @@ The following [subprojects][subproject-definition] are owned by sig-{{.Label}}:
 {{- end }}
 - **Owners:**
 {{- range .Owners }}
-  - {{.}}
+  - [{{trimSuffix (orgRepoPath .) "/OWNERS"}}]({{githubURL .}})
 {{- end }}
 {{- if .Contact }}
 - **Contact:**
