Add link to the AR tempate that was generated

--- a/generator/annual-report/github_issue.tmpl
+++ b/generator/annual-report/github_issue.tmpl
@@ -19,6 +19,8 @@ Key dates:
 
 More detailed information on the annual reports process is available [here](https://git.k8s.io/community/committee-steering/governance/annual-reports.md).
 
+Your group's report template is available here: https://git.k8s.io/community/{{.Dir}}/annual-report-{{lastYear}}.md
+
 If you have any questions or concerns about this process, you may reach the Steering Committee via the following methods:
 - Slack/E-mail your liaison directly
 - The public #steering-committee channel in Slack
