Add notes to AR template that the generation will happen in the future

--- a/generator/annual-report/sig_report.tmpl
+++ b/generator/annual-report/sig_report.tmpl
@@ -17,7 +17,7 @@
 3. KEP work in {{lastYear}} (1.x, 1.y, 1.z):
 
 <!--
-Generated from kubernetes/enhancements kep.yaml files
+In future, this will be generated from kubernetes/enhancements kep.yaml files
 1. with SIG as owning-sig or in participating-sigs
 2. listing 1.x, 1.y, or 1.z in milestones or in latest-milestone
 -->
@@ -75,15 +75,15 @@ Generated from kubernetes/enhancements kep.yaml files
 - Primary mailing list member count:
 - Primary meeting attendee count (estimated, if needed):
 - Primary meeting participant count (estimated, if needed):
-- Unique reviewers for SIG-owned packages: {generated from OWNERS files referenced from subprojects, expanded with OWNERS_ALIASES files}
-- Unique approvers for SIG-owned packages: {generated from OWNERS files referenced from subprojects, expanded with OWNERS_ALIASES files}
+- Unique reviewers for SIG-owned packages: <!-- in future, this will be generated from OWNERS files referenced from subprojects, expanded with OWNERS_ALIASES files -->
+- Unique approvers for SIG-owned packages: <!-- in future, this will be generated from OWNERS files referenced from subprojects, expanded with OWNERS_ALIASES files -->
 
 Include any other ways you measure group membership
 
 ## Subprojects
 
 <!--
-Generated from delta of sigs.yaml from $YYYY-01-01 to $YYYY-12-31
+In future, this will be generated from delta of sigs.yaml from $YYYY-01-01 to $YYYY-12-31
 Manually visible via `git diff HEAD@{$YYYY-01-01} HEAD@{$YYYY-12-31} -- $sig-id/README.md`
 -->
 
@@ -102,7 +102,7 @@ Continuing:
 ## Working groups
 
 <!--
-Generated from delta of sigs.yaml from $YYYY-01-01 to $YYYY-12-31
+In future, this will be generated from delta of sigs.yaml from $YYYY-01-01 to $YYYY-12-31
 Manually visible via `git diff HEAD@{$YYYY-01-01} HEAD@{$YYYY-12-31} -- $sig-id/README.md`
 -->
 
