--- a/generator/sig_readme.tmpl
+++ b/generator/sig_readme.tmpl
@@ -68,6 +68,17 @@ subprojects, and resolve cross-subproject technical issues and decisions.
 - Steering Committee Liaison: {{.Contact.Liaison.Name}} (**[@{{.Contact.Liaison.GitHub}}](https://github.com/{{.Contact.Liaison.GitHub}})**)
 {{- end }}
 
+{{- if .ReportingWGs }}
+
+## Working Groups
+
+The following [working groups][working-group-definition] are sponsored by sig-{{.Label}}:
+
+{{- range .ReportingWGs }}
+* [WG {{.}}](/{{.DirName}})
+{{- end }}
+{{ end }}
+
 {{- if .Subprojects }}
 
 ## Subprojects
@@ -114,3 +125,4 @@ The following [subprojects][subproject-definition] are owned by sig-{{.Label}}:
 {{- end }}
 
 [subproject-definition]: https://github.com/kubernetes/community/blob/master/governance.md#subprojects
+[working-group-definition]: https://github.com/kubernetes/community/blob/master/governance.md#working-groups
