Link to sigs from WG readmes

--- a/generator/wg_readme.tmpl
+++ b/generator/wg_readme.tmpl
@@ -8,7 +8,7 @@ The [charter]({{.CharterLink}}) defines the scope and governance of the {{.Name}
 {{- if .StakeholderSIGs }}
 ## Stakeholder SIGs
 {{- range .StakeholderSIGs }}
-* SIG {{.}}
+* [SIG {{.}}](/{{.DirName}})
 {{- end }}
 {{ end }}
 {{ if .Meetings -}}
