Add automatic labelling for annual reports and charter changes

--- a/generator/annual-report/github_issue.tmpl
+++ b/generator/annual-report/github_issue.tmpl
@@ -29,3 +29,4 @@ If you have any questions or concerns about this process, you may reach the Stee
 
 /{{.Prefix}} {{.Label}}
 /committee steering
+/area annual-reports
