Remove user-groups from governance docs & other user-group references

--- a/generator/liaisons.tmpl
+++ b/generator/liaisons.tmpl
@@ -18,8 +18,8 @@ the Steering Committee.
 
 Liaisons are assigned community groups at random (adjustments can be
 made, if needed) with each member having an (almost) equal distribution
-of SIGs, WGs and UGs. Each year after Steering Committee elections, new 
-members will assume one of the departing members groups. 
+of SIGs and WGs. Each year after Steering Committee elections, new
+members will assume one of the departing members groups.
 
 | Community Group            | Steering Committee Liaison |
 | -------------------------- | -------------------------- |
