--- a/generator/committee_readme.tmpl
+++ b/generator/committee_readme.tmpl
@@ -32,6 +32,14 @@ The [charter]({{.CharterLink}}) defines the scope and governance of the {{.Name}
 * {{.Name}} (**[@{{.GitHub}}](https://github.com/{{.GitHub}})**){{if .Company}}, {{.Company}}{{end}}
 {{- end }}
 {{- end }}
+
+{{- if .Leadership.EmeritusLeads }}
+
+## Emeritus Members
+{{ range .Leadership.EmeritusLeads }}
+* {{.Name}} (**[@{{.GitHub}}](https://github.com/{{.GitHub}})**)
+{{- end }}
+{{- end }}
 {{- end }}
 
 ## Contact
@@ -82,7 +90,7 @@ The following [subprojects][subproject-definition] are owned by the {{.Name}} Co
   - [Mailing List]({{.Contact.MailingList}})
 {{- end }}
 {{- if .Contact.GithubTeams }}
-  - GitHub Teams: 
+  - GitHub Teams:
 {{- range .Contact.GithubTeams }}
     - [@kubernetes/{{.Name}}](https://github.com/orgs/kubernetes/teams/{{.Name}}) {{- if .Description }} - {{.Description}}{{- end}}
 {{- end }}
