update annual report questions
Signed-off-by: Nabarun Pal <pal.nabarun95@gmail.com>

--- a/generator/annual-report/github_issue.tmpl
+++ b/generator/annual-report/github_issue.tmpl
@@ -16,8 +16,8 @@ Actions for the chair/organizer of the community group:
 Once all the above items are complete, this issue may be `/close`'d
 
 Key dates:
-- Initial PR to communtiy repo should be opened by March 24th, {{now.UTC.Year}}
-- PR should be reviewed and merged by April 7th, {{now.UTC.Year}}
+- Initial PR to communtiy repo should be opened by May 1, {{now.UTC.Year}}
+- PR should be reviewed and merged by May 22, {{now.UTC.Year}}
 
 More detailed information on the annual reports process is available [here](https://git.k8s.io/community/committee-steering/governance/annual-reports.md).
 
