--- a/generator/annual-report/wg_report.tmpl
+++ b/generator/annual-report/wg_report.tmpl
@@ -1,46 +1,19 @@
 # {{lastYear}} Annual Report: {{.Prefix | toUpper}} {{.Name}}
 
-## Current initiatives
+## Current initiatives and Project Health
+
 
 1. What work did the WG do this year that should be highlighted?
-   For example, artifacts, reports, white papers produced this year.
 
-   -
-   -
-   -
+<!--
+   Some example items that might be worth highlighting:
+   - artifacts
+   - reports
+   - white papers
+   - work not tracked in KEPs
+-->
 
-2. What initiatives are you working on that aren't being tracked in KEPs?
-
-   -
-   -
-   -
-
-## Project health
-
-1. What's the current roadmap until completion of the working group?
-
-   -
-   -
-   -
-
-2. Does the group have contributors from multiple companies/affiliations?
-
-   -
-
-3. Are there ways end users/companies can contribute that they currently are not?
-   If one of those ways is more full time support, what would they work on and why?
-
-   -
-   -
-
-## Membership
-
-- Primary slack channel member count:
-- Primary mailing list member count:
-- Primary meeting attendee count (estimated, if needed):
-- Primary meeting participant count (estimated, if needed):
-
-Include any other ways you measure group membership
+2. Are there any areas and/or subprojects that your group needs help with (e.g. fewer than 2 active OWNERS)?
 
 ## Operational
 
