--- a/generator/annual-report/sig_report.tmpl
+++ b/generator/annual-report/sig_report.tmpl
@@ -1,18 +1,18 @@
 # {{lastYear}} Annual Report: {{.Prefix | toUpper}} {{.Name}}
 
-## Current initiatives
+## Current initiatives and Project Health
 
 1. What work did the SIG do this year that should be highlighted?
 
-   -
-   -
-   -
+<!--
+   Some example items that might be worth highlighting:
+   - Major KEP advancement
+   - Important initiatives that aren't tracked via KEPs
+   - Paying down significant tech debt
+   - Governance and leadership changes
+-->
 
-2. What initiatives are you working on that aren't being tracked in KEPs?
-
-   -
-   -
-   -
+2. Are there any areas and/or subprojects that your group needs help with (e.g. fewer than 2 active OWNERS)?
 
 {{$releases := getReleases -}}
 {{$owningSIG := .Dir -}}
@@ -26,96 +26,47 @@
       Please raise an issue in kubernetes/community, if the KEP metadata is correct but the generated list is incorrect.
 -->
 
-3. KEP work in {{lastYear}} ({{$releases.LatestMinusTwo}}, {{$releases.LatestMinusOne}}, {{$releases.Latest}}):
+3. Did you have community-wide updates in {{lastYear}} (e.g. KubeCon talks)?
+
+<!--
+  Examples include links to email, slides, or recordings.
+-->
+
+4. KEP work in {{lastYear}} ({{$releases.LatestMinusTwo}}, {{$releases.LatestMinusOne}}, {{$releases.Latest}}):
 {{if ne (len $alphaKeps) 0}}
   - Alpha
   {{- range $alphaKeps}}
     - [{{.Number}} - {{.Title}}](https://github.com/kubernetes/enhancements/tree/master/keps/{{.OwningSIG}}/{{.Name}}) - {{.Milestone.Alpha -}}
-  {{ end}}
-{{ end}}
+  {{ end}}{{ end}}
 {{if ne (len $betaKeps) 0}}
   - Beta
   {{- range $betaKeps}}
     - [{{.Number}} - {{.Title}}](https://github.com/kubernetes/enhancements/tree/master/keps/{{.OwningSIG}}/{{.Name}}) - {{.Milestone.Beta -}}
-  {{ end}}
-{{ end}}
+  {{ end}}{{ end}}
 {{if ne (len $stableKeps) 0}}
   - Stable
   {{- range $stableKeps}}
     - [{{.Number}} - {{.Title}}](https://github.com/kubernetes/enhancements/tree/master/keps/{{.OwningSIG}}/{{.Name}}) - {{.Milestone.Stable -}}
-  {{ end}}
-{{ end}}
-
-
-## Project health
-
-1. What areas and/or subprojects does your group need the most help with?
-   Any areas with 2 or fewer OWNERs? (link to more details)
-
-   -
-   -
-   -
-
-2. What metrics/community health stats does your group care about and/or measure?
-
-   -
-   -
-   -
-
-3. Does your [CONTRIBUTING.md] help **new** contributors engage with your group specifically by pointing
-   to activities or programs that provide useful context or allow easy participation?
-
-   -
-
-4. If your group has special training, requirements for reviewers/approvers, or processes beyond the general [contributor guide],
-   does your [CONTRIBUTING.md] document those to help **existing** contributors grow throughout the [contributor ladder]?
-
-   -
-
-5. Does the group have contributors from multiple companies/affiliations?
-
-   -
-
-6. Are there ways end users/companies can contribute that they currently are not?
-   If one of those ways is more full time support, what would they work on and why?
-
-   -
-   -
-
-## Membership
-
-- Primary slack channel member count:
-- Primary mailing list member count:
-- Primary meeting attendee count (estimated, if needed):
-- Primary meeting participant count (estimated, if needed):
-- Unique reviewers for SIG-owned packages: <!-- in future, this will be generated from OWNERS files referenced from subprojects, expanded with OWNERS_ALIASES files -->
-- Unique approvers for SIG-owned packages: <!-- in future, this will be generated from OWNERS files referenced from subprojects, expanded with OWNERS_ALIASES files -->
-
-Include any other ways you measure group membership
+  {{ end}}{{ end}}
 
 ## [Subprojects](https://git.k8s.io/community/{{.Dir}}#subprojects)
 {{- define "subprojects" -}}
 {{- $owningSIG := .Dir -}}
-{{- if .New}}
 
-**New in {{lastYear}}:**
-{{range .New}}
-  - {{.}}
+{{- if .New}}
+**New in {{lastYear}}:**{{range .New}}
+  - [{{.}}](https://git.k8s.io/community/{{ $owningSIG }}#{{.}})
 {{- end}}
 {{- end}}
 
 {{- if .Retired}}
-
-**Retired in {{lastYear}}:**
-{{range .Retired}}
+**Retired in {{lastYear}}:**{{range .Retired}}
   - {{.}}
 {{- end}}
 {{- end}}
 
 {{- if .Continuing}}
-
-**Continuing:**
-{{range .Continuing}}
+**Continuing:**{{range .Continuing}}
   - {{.}}
 {{- end}}
 {{- end}}
@@ -123,29 +74,24 @@ Include any other ways you measure group membership
 
 {{ template "subprojects" (getCategorizedSubprojects .Dir) }}
 
-
 ## [Working groups](https://git.k8s.io/community/{{.Dir}}#working-groups)
 {{ $categorizedWorkingGroups := getCategorizedWorkingGroups .Dir }}
 {{- if $categorizedWorkingGroups.New}}
-
-**New in {{lastYear}}:**
-{{range $categorizedWorkingGroups.New }}
+**New in {{lastYear}}:**{{range $categorizedWorkingGroups.New }}
  - {{.}}
 {{- end}}
 {{- end}}
+
 
 {{- if $categorizedWorkingGroups.Retired}}
-
-**Retired in {{lastYear}}:**
-{{range $categorizedWorkingGroups.Retired }}
+**Retired in {{lastYear}}:**{{range $categorizedWorkingGroups.Retired }}
  - {{.}}
 {{- end}}
 {{- end}}
 
-{{- if $categorizedWorkingGroups.Continuing}}
 
-**Continuing:**
-{{range $categorizedWorkingGroups.Continuing }}
+{{- if $categorizedWorkingGroups.Continuing}}
+**Continuing:**{{range $categorizedWorkingGroups.Continuing }}
  - {{ . }}
 {{- end}}
 {{- end}}
@@ -153,22 +99,16 @@ Include any other ways you measure group membership
 ## Operational
 
 Operational tasks in [sig-governance.md]:
-
 - [ ] [README.md] reviewed for accuracy and updated if needed
 - [ ] [CONTRIBUTING.md] reviewed for accuracy and updated if needed
-      (or created if missing and your contributor steps and experience are different or more
-      in-depth than the documentation listed in the general [contributor guide] and [devel] folder.)
+- [ ] Other contributing docs (e.g. in devel dir or contributor guide) reviewed for accuracy and updated if needed
 - [ ] Subprojects list and linked OWNERS files in [sigs.yaml] reviewed for accuracy and updated if needed
-- [ ] SIG leaders (chairs, tech leads, and subproject owners) in [sigs.yaml] are accurate and active, and updated if needed
+- [ ] SIG leaders (chairs, tech leads, and subproject leads) in [sigs.yaml] are accurate and active, and updated if needed
 - [ ] Meeting notes and recordings for {{lastYear}} are linked from [README.md] and updated/uploaded if needed
-- [ ] Did you have community-wide updates in {{lastYear}} (e.g. community meetings, kubecon, or kubernetes-dev@ emails)? Links to email, slides, or recordings:
-      -
-      -
+
 
 [CONTRIBUTING.md]: https://git.k8s.io/community/{{.Dir}}/CONTRIBUTING.md
-[contributor ladder]: https://git.k8s.io/community/community-membership.md
 [sig-governance.md]: https://git.k8s.io/community/committee-steering/governance/sig-governance.md
 [README.md]: https://git.k8s.io/community/{{.Dir}}/README.md
 [sigs.yaml]: https://git.k8s.io/community/sigs.yaml
-[contributor guide]: https://git.k8s.io/community/contributors/guide/README.md
 [devel]: https://git.k8s.io/community/contributors/devel/README.md
