--- a/generator/wg_readme.tmpl
+++ b/generator/wg_readme.tmpl
@@ -19,7 +19,7 @@ The [charter]({{.CharterLink}}) defines the scope and governance of the {{.Name}
 {{- end }}
 
 {{- range .Meetings }}
-* {{.Description}}: [{{.Day}}s at {{.Time}} {{.TZ}}]({{.URL}}) ({{.Frequency}}). [Convert to your timezone](http://www.thetimezoneconverter.com/?t={{.Time}}&tz={{.TZ | tzUrlEncode}}).
+* {{.Description}}{{if .CalendarURL}} ([calendar]({{.CalendarURL}})){{end}}: [{{.Day}}s at {{.Time}} {{.TZ}}]({{.URL}}) ({{.Frequency}}). [Convert to your timezone](http://www.thetimezoneconverter.com/?t={{.Time | urlquery}}&tz={{.TZ | tzUrlEncode}}).
 {{- if .ArchiveURL }}
   * [Meeting notes and Agenda]({{.ArchiveURL}}).
 {{- end }}
